# computer-graphics-assignment

./: .gitignore  CMakeLists.txt  README.md
lab1/: lab1.txt  mainfile.cpp
lab2/: lab2.txt  mainfile.cpp
lab3/: lab3.txt  mainfile.cpp
lab4/: lab4.txt  mainfile.cpp
lab5/: lab5.txt  mainfile.cpp
lab6/: lab6.txt  mainfile.cpp
lab7/: lab7.txt  mainfile.cpp
